<resources>
    <string name="app_name">Around The World</string>
    <string name="menu_button_play">PLAY</string>
    <string name="menu_button_exit">EXIT</string>
    <string name="menu_button_mix_mode">Mix mode</string>
    <string name="menu_button_discovery_mode">Discovery Our World</string>
    <string name="menu_button_name_mode">Name mode</string>
    <string name="menu_button_leader_board">Leader board</string>
    <string name="menu_button_setting">Setting</string>

    <string name="facebook_app_id">1553477878285140</string>
    <string name="fb_login_protocol_scheme">fb1553477878285140</string>

</resources>
