<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_style2"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textSize="20pt"
            android:textColor="#ffffff"
            android:textStyle="bold"
           />

        <Button
            android:id="@+id/btFlagMode"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/menu_button_play"
            android:background="@drawable/bnt_style2"/>

        <Button
            android:id="@+id/btNameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btFlagMode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/menu_button_exit"
            android:background="@drawable/bnt_style2"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>