<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ModeActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style">
    <TextView
        android:id="@+id/tvLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT MODE"
        android:textSize="20pt"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btFlagMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabel1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bnt_style2"
        android:text="Flag mode" />

    <Button
        android:id="@+id/btDiscoveryMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btFlagMode"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bnt_style2"
        android:text="@string/menu_button_discovery_mode"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btLeaderBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btDiscoveryMode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bnt_style2"
        android:text="@string/menu_button_leader_board" />

    <Button
        android:id="@+id/btSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bnt_style2"
        android:text="@string/menu_button_setting"
        android:layout_below="@id/btLeaderBoard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
</RelativeLayout>
</android.support.constraint.ConstraintLayout>